...

        val collectionRef = firestore.collection(AISLES_COLLECTION)

        // Vérifie si la collection est vide avant d'attacher le listener
        collectionRef.get().addOnSuccessListener { snapshot ->
            if (snapshot.isEmpty) {
                val defaultAisle = Aisle("Aisle 1")
                addAisle(defaultAisle)
            }

            listenerRegistration = collectionRef
                .orderBy("timestamp", Query.Direction.ASCENDING)
                .addSnapshotListener { snapshotListener, e ->
...
